DOMTokenList shouldn't add empty attributes https://bugs.webkit.org/show_bug.cgi?id=178280

Reviewed by Ryosuke Niwa.

LayoutTests/imported/w3c:

Rebaseline web-platform-test now that all checks are passing.

* web-platform-tests/dom/nodes/Element-classlist-expected.txt:

Source/WebCore:

DOMTokenList shouldn't add empty attributes after:
- https://github.com/whatwg/dom/pull/488

Firefox and Chrome follow the latest spec.

No new tests, updating existing test.

* html/DOMTokenList.cpp:
(WebCore::DOMTokenList::updateAssociatedAttributeFromTokens):
Implement the first step of https://dom.spec.whatwg.org/#concept-dtl-update


Canonical link: https://commits.webkit.org/194513@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@223306 268f45cc-cd09-0410-ab3c-d52691b4dbfc